# omni-sqlish

./: .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yaml  pyproject.toml
presets/linux/: setup.yml
scripts/: install.bat  install.sh
src/: contain.py
src/omnisqlish/: __init__.py  main.py
