[tool.poetry]
name = "omnisqlish"
version = "0.1.0"
description = "translation space of sql shematic dumps"
authors = ["Sett Sarverott <sarverott@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"
sqlite3-to-mysql = "^2.4.0"
mysql-to-sqlite3 = "^2.4.1"
podman = "^5.4.0.1"
mysql-connector-python = "^9.3.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
